Fix: cropped profile name problem.

--- a/styles/css/vtex.login.css
+++ b/styles/css/vtex.login.css
@@ -74,15 +74,6 @@ span[class*='vtex-login-2-x-profile'] {
 	font-weight: bold;
 	color: #F71963;
 }
-span[class*='vtex-login-2-x-profile']::after {
-	content: '';
-	background: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 7L8 11L12 7' stroke='%2300AC5A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
-		no-repeat;
-	display: flex;
-	width: 16px;
-	height: 16px;
-	margin-right: 12px;
-}
 @media screen and (min-width: 1025px) {
 	.container :global(.vtex-button__label) span div div {
 		padding-top: 5px;
